--- a/.config/i3/config
+++ b/.config/i3/config
@@ -166,7 +166,7 @@ bindsym $mod+F9 exec --no-startup-id dmenupoweroff
 bindsym $mod+F11 exec --no-startup-id dmenumount
 bindsym $mod+F12 exec --no-startup-id dmenuunmount
 
-bindsym Print exec --no-startup-id maim ~/Pictures/prntscr/"$(date '+%d-%m-%y_%H-%M-%S').png"
+bindsym Print exec --no-startup-id maim ~/Pictures/prntscr/"$(date '+%y-%m-%d_%H-%M-%S').png"
 bindsym Shift+Print exec --no-startup-id dmenu_maim
 
 bindsym $mod+Escape exec --no-startup-id dmenu_system
